--- a/Youtube_Downloader.ipynb
+++ b/Youtube_Downloader.ipynb
@@ -60,16 +60,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cZsx7KAknPB9",
-        "outputId": "fceb6da4-6d87-4527-b66a-5efedf6ed85c"
+        "outputId": "95718263-5fe5-42a2-eb48-5db8c8f32f9c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for pytube (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ]
@@ -95,7 +94,7 @@
       "metadata": {
         "id": "oJV7hnsMnXb_"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +127,7 @@
       "metadata": {
         "id": "bL30h0kUndHo"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +156,7 @@
       "metadata": {
         "id": "0XpXvNMCn2BV"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +176,7 @@
       "metadata": {
         "id": "By77GB9VQjkb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +187,7 @@
       "metadata": {
         "id": "quKZiKdOQlFu"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -271,20 +270,24 @@
         "        if url in downloaded_list:\n",
         "          continue\n",
         "        else:\n",
-        "          youtube = YouTube(url,\n",
-        "                            use_oauth = True,\n",
-        "                            allow_oauth_cache = True\n",
-        "                            )\n",
+        "          try:\n",
+        "            youtube = YouTube(url,\n",
+        "                              use_oauth = True,\n",
+        "                              allow_oauth_cache = True\n",
+        "                              )\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "          downloader = youtube.streams.get_highest_resolution()\n",
-        "          downloader.download('/content/drive/MyDrive/Youtube_Downloads/{}'.format(playlist.title))\n",
-        "          downloaded_list += [url]\n",
-        "          with open('/content/drive/MyDrive/Youtube_Downloads/Logs/{}_downloaded_list.csv'.format(playlist.title), 'w') as f:\n",
-        "            for item in downloaded_list:\n",
-        "              f.write(f'{item}\\n')\n",
+        "            downloader = youtube.streams.get_highest_resolution()\n",
+        "            downloader.download('/content/drive/MyDrive/Youtube_Downloads/{}'.format(playlist.title))\n",
+        "            downloaded_list += [url]\n",
+        "            with open('/content/drive/MyDrive/Youtube_Downloads/Logs/{}_downloaded_list.csv'.format(playlist.title), 'w') as f:\n",
+        "              for item in downloaded_list:\n",
+        "                f.write(f'{item}\\n')\n",
+        "          except:\n",
+        "            print(f'\\nError: Skipping video ({youtube.title}).')\n",
+        "            continue\n",
         "      print('\\nDownloading Finished.')\n",
         "      break\n",
         "\n",
